opam-version: "1.2"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "ocamlbuild-js_of_ocaml"
version: "dev"

build:   [make "-C" "ocamlbuild"]
install: [make "install-lib" "BINDIR=%{bin}%"]
remove:  ["ocamlfind" "remove" "ocamlbuild-js_of_ocaml"]

depends: [
  "ocamlfind" {build}
  "ocamlbuild"
]
available: [ ocaml-version >= "4.00.0" ]
